--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p>Ph.D. Student <br>University of Florida</p>
         <p>Research Affiliate<br><a href="https://fycs.ifas.ufl.edu/">Family, Youth and Community Science (FYCS)</a></p>
     <h3><a href="https://yongliu.github.io/">Home</a></h3>
-        <h3><a href="https://yongliu.github.io/research.html">Research</a></h3>
+        <h3><a href="https://yongliu2023.github.io/yongliu.github.io/research.html">Research</a></h3>
     <h3><a href="https://yongliu.github.io/research/CV.pdf">CV</a></h3>  
         <h3><a href="https://yongliu.github.io/course.html">Course</a></h3> 
         <h3><a href="https://yongliu.github.io/resource.html">Resource</a></h3> 
