--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
         <div class="social-row">
           <a href="mailto:yongliu2023@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.com.tw/citations?user=t1DQ23sAAAAJ&hl=en&oi=sra" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-          <a href="https://https://orcid.org/my-orcid?orcid=0000-0003-1939-2799"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>  
+          <a href="https://orcid.org/0000-0003-1939-2799"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>  
           <a href="http://github.com/yongliu2023"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <a href="https://twitter.com/yongliu78825624" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
           <a href="https://www.linkedin.com/in/yong-liu-370770220/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
