--- a/index.html
+++ b/index.html
@@ -98,7 +98,18 @@
       <section>
       <img src="be0c553c85e0833c41aee79d7b10e6e.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
       <p>I am currently an third-year Phd <a href="https://fycs.ifas.ufl.edu/"> Student </a> at the <a href="https://www.ufl.edu/">University of Florida</a>
-      <p>My research interests include Climate Change Adaptation and Resilience.</p>
+      <p> My research interests are farmer's climate change adaptation decision-making and their resilience to climate change. Climate variability poses a direct threat to Florida's agricultural production and sustained growth. Farmers often engage in different adaptation measures and implement climate-resilient strategies to respond to climate change adverse effects. Thus, my research aims to examine the determinants of field-crop farmers' response to climate change at the individual and community levels.  Also, I plan to investigate the adaptation decision-making and resilience by farmers' intersectionality, including age, sex, race, median income, and median farm size.</p>
+      <h2> Research Interests </h2>
+         <ul>
+       <li>Climate Change Adaptation </a></li>
+       <li>Resilience</a></li>
+       <li>Agriculture</a></li>
+      </ul>
+      <h3> Education </h3>
+        <ul>
+       <li><a href="https://www.ufl.edu/"> Ph.D. student at University of Florida (2019-present) </a></li>
+       <li><a href="https://www.hzau.edu.cn/"> M.S. at Huazahong Agricultural University (2016-2019)</a></li>
+       <li><a href="https://www.ahu.edu.cn/"> B.S. at Anhui University (2012-2016)</a></li>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
