--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="be0c553c85e0833c41aee79d7b10e6e.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
-      <p>I am currently an third-year Phd <a href="https://fycs.ifas.ufl.edu/"> Student </a> at the <a href="https://www.ufl.edu/">University of Florida</a>
+      <img src="be0c553c85e0833c41aee79d7b10e6e.jpg" height="250" width="250" alt="Yong Liu"></h3>
+      <p>I am currently an third-year Ph.D. <a href="https://fycs.ifas.ufl.edu/"> Student </a> at the <a href="https://www.ufl.edu/">University of Florida</a>
       <p> My research interests are farmer's climate change adaptation decision-making and their resilience to climate change. Climate variability poses a direct threat to Florida's agricultural production and sustained growth. Farmers often engage in different adaptation measures and implement climate-resilient strategies to respond to climate change adverse effects. Thus, my research aims to examine the determinants of field-crop farmers' response to climate change at the individual and community levels.  Also, I plan to investigate the adaptation decision-making and resilience by farmers' intersectionality, including age, sex, race, median income, and median farm size.</p>
       <h2> Research Interests </h2>
          <ul>
