--- a/resource.html
+++ b/resource.html
@@ -98,36 +98,17 @@
   <h2><a id="computer-code" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>Econometrics</h2>
     <h3>Matlab</h3>
         <ul>
-          <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
-          <li><a href="http://quantecon.org/notebooks.html">QuantEcon's notebook gallery</a>, which includes a few of my notebooks introducing data analysis and optimization in <a href="http://julialang.org/">Julia</a>.</li>
-          <li><a href="https://github.com/tyleransom/Julia">My Github repository</a>, which introduces basic econometric models in <a href="http://julialang.org/">Julia</a>.</li>
-          <li><a href="https://github.com/tyleransom/EMalgorithmExample"><code>EM algorithm example</code></a>: Code to generate data and estimate simple versions of the EM algorithm for estimation of models with discrete type-specific unobserved heterogeneity.</li>
+          <li><a href="https://www.spatial-econometrics.com/"> Econometrics Toolbox: by James P. LeSage </a>: Matlab code for Spatial Econometrics</a>.</li>
         </ul>
-    <h3>Matlab</h3>
+    <h3>Discrete Choice Model</h3>
         <ul>
-          <li><a href="http://www.mathworks.com/matlabcentral/fileexchange/41150-summarize"><code>summarize.m</code></a>: Mimics Stata's <code>summarize</code> command.</li>
-          <li><a href="http://www.mathworks.com/matlabcentral/fileexchange/47927-normalmle-m"><code>normalMLE.m</code></a>: Estimates normal linear regression with heteroskedastic errors by maximum likelihood.</li>
-          <li><a href="http://www.mathworks.com/matlabcentral/fileexchange/47284-apply-restrictions"><code>applyRestr.m</code></a>: Allows for easy parameter restrictions in optimization problems (co-writen with <a href="http://bschool.pepperdine.edu/about/people/faculty/jared-ashworth/">Jared Ashworth</a>).</li>
-          <li><a href="http://www.mathworks.com/matlabcentral/fileexchange/47389-conditional-logit"><code>clogit.m</code></a>: Estimates conditional logit regression by maximum likelihood (co-writen with <a href="http://bschool.pepperdine.edu/about/people/faculty/jared-ashworth/">Jared Ashworth</a>).</li>
-          <li><a href="https://www.mathworks.com/matlabcentral/fileexchange/68256-ordered-logit"><code>ologit.m</code></a>: Estimates the ordered logit model by maximum likelihood.</li>
-          <li><a href="https://www.mathworks.com/matlabcentral/fileexchange/68255-emalgorithmexample"><code>EM algorithm example</code></a>: Code to generate data and estimate simple versions of the EM algorithm for estimation of models with discrete type-specific unobserved heterogeneity.</li>
+          <li><a href="https://eml.berkeley.edu/books/choice2.html"> Discrete Choice Model with Simulation: by Kenneth Train </a>.</li>
         </ul>
-    <h3>LaTeX</h3>
-        <ul>
-          <li><a href="https://github.com/tyleransom/CapeTownBeamerTheme">Cape Town</a>: a Beamer slide theme for LaTeX presentations.</li>
-          <li><a href="https://github.com/tyleransom/beamer-poster-example">Poster</a>: a LaTeX poster example.</li>
-          <li><a href="https://github.com/tyleransom/jolebib/blob/master/jole.bst">jole.bst</a>: a BibTeX style file for formatting citations according to the style of the <i>Journal of Labor Economics</i>.</li>
-          <li><a href="https://tyleransom.github.io/research/CVtemplate.tex">CV template</a>: a template for producing a CV in LaTeX (<a href="https://tyleransom.github.io/research/CVtemplate.pdf">PDF output</a>)</li>
-          <li><a href="https://github.com/tyleransom/Journal-Reviewer-Template">Template for completing peer review</a>: a template for producing materials for requests to serve as a peer reviewer </li>
-        </ul>
-
     <hr>
 
-    <h2><a id="machine-learning" class="anchor" href="#machinelearning" aria-hidden="true"><span class="octicon octicon-link"></span></a>Machine Learning Resources</h2>
+    <h2><a id="Network Analysis" class="anchor" href="#networkanalysis" aria-hidden="true"><span class="octicon octicon-link"></span></a> Network Resources</h2>
         <ul>
-          <li><a href="https://tyleransom.github.io/research/IntroMachineLearning.pdf">Introduction to machine learning for social scientists</a>: Slides from a short presentation that outlines what machine learning is and how social scientists can benefit from using its methods.</li>
-          <li><a href="https://homes.cs.washington.edu/~pedrod/papers/cacm12.pdf">Practical tips for machine learning practitioners</a>, via Pedro Domingos.</li>
-          <li><a href="http://www.basicbooks.com/full-details?isbn=9780465065707">The Master Algorithm</a>, written by Pedro Domingos.</li>
+          <li><a href="https://gephi.org/">Gephi softwork for network analysis</a>: introduction for Gephi software.</li>
         </ul>
       </section>
     </div>
