--- a/resource.html
+++ b/resource.html
@@ -69,10 +69,11 @@
         justify-content: space-between;
       }
     </style>
-  </head>
+   </head>
   <body>
     <div class="wrapper">
-       <h1>Yong Liu</h1>
+      <header>
+        <h1>Yong Liu</h1>
         <p>Ph.D. Student <br>University of Florida</p>
         <p>Research Affiliate<br><a href="https://fycs.ifas.ufl.edu/">Family, Youth and Community Science (FYCS)</a></p>
     <h3><a href="https://yongliu2023.github.io/">Home</a></h3>
