--- a/resource.html
+++ b/resource.html
@@ -97,7 +97,7 @@
       </header>
       <section>
   <h2><a id="computer-code" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>Econometrics</h2>
-    <h3>Matlab</h3>
+    <h3>Spatial Econometrics</h3>
         <ul>
           <li><a href="https://www.spatial-econometrics.com/"> Econometrics Toolbox: by James P. LeSage </a>: Matlab code for Spatial Econometrics</a>.</li>
         </ul>
