--- a/resource.html
+++ b/resource.html
@@ -107,7 +107,7 @@
         </ul>
     <hr>
 
-    <h2><a id="Network Analysis" class="anchor" href="#networkanalysis" aria-hidden="true"><span class="octicon octicon-link"></span></a> Network Resources</h2>
+    <h2><a id="Network Analysis" class="anchor" href="#networkanalysis" aria-hidden="true"><span class="octicon octicon-link"></span></a> Network Analysis</h2>
         <ul>
           <li><a href="https://gephi.org/">Gephi softwork for network analysis</a>: introduction for Gephi software.</li>
         </ul>
