--- a/course.html
+++ b/course.html
@@ -102,11 +102,11 @@
       <h2>Course</h2>
      
       <hr />
-      <h3>Instructor and Designer</h3>
-      <h4><b>Econ 4970/4523: Economics of Education (University of Oklahoma, Fall 2017, Spring 2018, Fall 2018, Fall 2019)</b></h4>
-      Undergraduate course on causal inference and policy debates in the US education system
+      <h3>Research Methods and Statistics</h3>
+      <h4><b>FYC 6800: Scientific Reasoning and Research Design, Fall 2019)</b></h4>
+      Graduate course taught by Dr. Mickie Swisher
       <ul>
-       <li><a href="https://www.amazon.com/Economics-Education-Michael-Lovenheim/dp/0716777045">Textbook</a></li>
+       <li><a href="https://fycs.ifas.ufl.edu/swisher/6800_21_CNV/00_6800_21_Home_CNV.htm">Course Website</a></li>
       </ul>
       
       </section>
