--- a/research.html
+++ b/research.html
@@ -127,7 +127,8 @@
     <hr>
 
     <h2><a id="recent-papers-updated" class="anchor" href="#workingpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Working Papers</h2>
- 
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Coming soon.</p></div><br>
+      
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
