--- a/research.html
+++ b/research.html
@@ -117,7 +117,8 @@
     Abstract   
     </button>   
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> This study aims to explore gender-based differences in financial socialization and their effects on financial knowledge in Turkey—a nation that provides a distinctive case study since it combines economic modernization with a strong adherence to traditional gender role beliefs. We used the Social Learning Theory and Social Role Theory as guiding frameworks for this cross-sectional study.  The sample of the study consisted 513 adult participants. About half (50.7%) of the sample was composed of female respondents, and the average age of respondents in the total sample was 31.2 years old (SD=12.09). Our results indicated that financial knowledge levels remain low in Turkey. Despite the implementation of recent national financial education programs, a gender gap in financial knowledge exists, where Turkish women are more disadvantaged in terms of financial knowledge. Mothers and siblings are influential role models and source of financial knowledge for female respondents well into adulthood, more so than males. Irrespective of gender, parental direct teaching  is a catalyst for increased levels of financial knowledge. On the other hand, parental role modeling  is associated with lower levels of financial knowledge, even when controlling for socio-demographic variables. Our findings shed light on relevant aspects to be considered when developing financial literacy programs and interventions that may potentially improve the national financial.</p></div><br>
-    
+    <p style="margin:0"><button class="accordion">
+      
     <hr>
 
    
