--- a/course.html
+++ b/course.html
@@ -107,8 +107,17 @@
       Graduate course taught by Dr. Mickie Swisher
       <ul>
        <li><a href="https://fycs.ifas.ufl.edu/swisher/6800_21_CNV/00_6800_21_Home_CNV.htm">Course Website</a></li>
+      <h4><b>FYC 6802: Advanced Research Methods, Spring 2020)</b></h4>
+      Graduate course taught by Dr. Mickie Swisher
+      <ul>
+       <li><a href="https://fycs.ifas.ufl.edu/swisher/6802_21/00_home_21.htm">Course Website</a></li>
       </ul>
-      
+      <h4><b>GEO 6168: Spatial Econometrics, Spring 2020)</b></h4>
+      Graduate course taught by Dr. Robert Walker
+      <ul>
+       <li><a href="https://www.routledge.com/Introduction-to-Spatial-Econometrics/LeSage-Pace/p/book/9781420064247">Course Textbook</a></li>
+      </ul>
+        
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
