--- a/resource.html
+++ b/resource.html
@@ -96,10 +96,11 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-  <h2><a id="computer-code" class="anchor" href="#computercode" aria-hidden="true"><span class="octicon octicon-link"></span></a>Econometrics</h2>
+  <h2><a id="spatialeco" class="anchor" href="#spatialeco" aria-hidden="true"><span class="octicon octicon-link"></span></a>Spatial Econometrics</h2>
     <h3>Spatial Econometrics</h3>
         <ul>
-          <li><a href="https://www.spatial-econometrics.com/"> Econometrics Toolbox: by James P. LeSage </a>: Matlab code for Spatial Econometrics</a>.</li>
+          <li><a href="https://www.spatial-econometrics.com/"> Econometrics Toolbox: by Dr. James P. LeSage </a>: Matlab code for Spatial Econometrics</a>.</li>
+          <li><a href="https://geodacenter.github.io/">GeoDa Software: Dr. Luc Anselin </a>: GeoDa for Spatial Econometrics</a>.</li>
         </ul>
     <h3>Discrete Choice Model</h3>
         <ul>
@@ -109,7 +110,7 @@
 
     <h2><a id="Network Analysis" class="anchor" href="#networkanalysis" aria-hidden="true"><span class="octicon octicon-link"></span></a> Network Analysis</h2>
         <ul>
-          <li><a href="https://gephi.org/">Gephi softwork for network analysis</a>: introduction for Gephi software.</li>
+          <li><a href="https://gephi.org/">Gephi softwork for network analysis</a>: Introduction for Gephi software.</li>
         </ul>
       </section>
     </div>
