--- a/resource.html
+++ b/resource.html
@@ -110,7 +110,7 @@
 
     <h2><a id="Network Analysis" class="anchor" href="#networkanalysis" aria-hidden="true"><span class="octicon octicon-link"></span></a> Network Analysis</h2>
         <ul>
-          <li><a href="https://gephi.org/">Gephi softwork for network analysis</a>: Introduction for Gephi software.</li>
+          <li><a href="https://gephi.org/">Gephi software for network analysis</a>: Introduction for Gephi software.</li>
         </ul>
       </section>
     </div>
