--- a/resource.html
+++ b/resource.html
@@ -96,7 +96,7 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-  <h2><a id="spatialeco" class="anchor" href="#spatialeco" aria-hidden="true"><span class="octicon octicon-link"></span></a>Spatial Econometrics</h2>
+  <h2><a id="spatialeco" class="anchor" href="#spatialeco" aria-hidden="true"><span class="octicon octicon-link"></span></a> Micro Econometrics</h2>
     <h3>Spatial Econometrics</h3>
         <ul>
           <li><a href="https://www.spatial-econometrics.com/"> Econometrics Toolbox: by Dr. James P. LeSage </a>: Matlab code for Spatial Econometrics</a>.</li>
@@ -112,6 +112,19 @@
         <ul>
           <li><a href="https://gephi.org/">Gephi software for network analysis</a>: Introduction for Gephi software.</li>
         </ul>
+    <h2><a id="gis" class="anchor" href="#gis" aria-hidden="true"><span class="octicon octicon-link"></span></a> GIS</h2>
+        <h3>ArcGIS pro</h3>
+        <ul>
+          <li><a href="https://www.esri.com/en-us/arcgis/products/arcgis-pro/overview"> ArcGIS Pro Overview </a>.</li>
+        </ul>
+        <h3>GEO datasets</h3>
+        <ul>
+          <li><a href="http://www.usgs.gov/"> U.S. Geological Survey </a>.</li>
+          <li><a href="http://www.noaa.gov/"> National Oceanic and Atmospheric Administration </a>.</li>
+          <li><a href="https://www.fema.gov/"> Federal Emergency Management Agency </a>.</li>
+          <li><a href="https://www.fs.fed.us/"> Forest Sevice </a>.</li>
+        </ul>
+    <hr>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
