--- a/resource.html
+++ b/resource.html
@@ -116,6 +116,15 @@
         <h3>ArcGIS pro</h3>
         <ul>
           <li><a href="https://www.esri.com/en-us/arcgis/products/arcgis-pro/overview"> ArcGIS Pro Overview </a>.</li>
+          <li><a href="https://developers.arcgis.com/python/"> ArcGIS With Python </a>.</li>
+        </ul>
+        <h3>QGIS</h3>
+        <ul>
+          <li><a href="https://qgis.org/en/site/"> QGIS </a>.</li>
+        </ul>
+        <h3>GEE</h3>
+        <ul>
+          <li><a href="https://earthengine.google.com/"> Goolge Earth Engine </a>.</li>
         </ul>
         <h3>GEO datasets</h3>
         <ul>
