--- a/resource.html
+++ b/resource.html
@@ -99,39 +99,39 @@
   <h2><a id="spatialeco" class="anchor" href="#spatialeco" aria-hidden="true"><span class="octicon octicon-link"></span></a> Micro Econometrics</h2>
     <h3>Spatial Econometrics</h3>
         <ul>
-          <li><a href="https://www.spatial-econometrics.com/"> Econometrics Toolbox: by Dr. James P. LeSage </a>: Matlab code for Spatial Econometrics</a>.</li>
-          <li><a href="https://geodacenter.github.io/">GeoDa Software: Dr. Luc Anselin </a>: GeoDa for Spatial Econometrics</a>.</li>
+          <li><a href="https://www.spatial-econometrics.com/"> Econometrics Toolbox: by Dr. James P. LeSage </a>: Matlab code for Spatial Econometrics</a></li>
+          <li><a href="https://geodacenter.github.io/">GeoDa Software: Dr. Luc Anselin </a>: GeoDa for Spatial Econometrics</a></li>
         </ul>
     <h3>Discrete Choice Model</h3>
         <ul>
-          <li><a href="https://eml.berkeley.edu/books/choice2.html"> Discrete Choice Model with Simulation: by Kenneth Train </a>.</li>
+          <li><a href="https://eml.berkeley.edu/books/choice2.html"> Discrete Choice Model with Simulation: by Kenneth Train </a></li>
         </ul>
     <hr>
 
     <h2><a id="Network Analysis" class="anchor" href="#networkanalysis" aria-hidden="true"><span class="octicon octicon-link"></span></a> Network Analysis</h2>
         <ul>
-          <li><a href="https://gephi.org/">Gephi software for network analysis</a>: Introduction for Gephi software.</li>
+          <li><a href="https://gephi.org/">Gephi software for network analysis</a>: Introduction for Gephi software</li>
         </ul>
     <h2><a id="gis" class="anchor" href="#gis" aria-hidden="true"><span class="octicon octicon-link"></span></a> GIS</h2>
         <h3>ArcGIS pro</h3>
         <ul>
-          <li><a href="https://www.esri.com/en-us/arcgis/products/arcgis-pro/overview"> ArcGIS Pro Overview </a>.</li>
-          <li><a href="https://developers.arcgis.com/python/"> ArcGIS With Python </a>.</li>
+          <li><a href="https://www.esri.com/en-us/arcgis/products/arcgis-pro/overview"> ArcGIS Pro Overview </a></li>
+          <li><a href="https://developers.arcgis.com/python/"> ArcGIS With Python </a></li>
         </ul>
         <h3>QGIS</h3>
         <ul>
-          <li><a href="https://qgis.org/en/site/"> QGIS </a>.</li>
+          <li><a href="https://qgis.org/en/site/"> QGIS </a></li>
         </ul>
         <h3>GEE</h3>
         <ul>
-          <li><a href="https://earthengine.google.com/"> Goolge Earth Engine </a>.</li>
+          <li><a href="https://earthengine.google.com/"> Goolge Earth Engine </a></li>
         </ul>
         <h3>GEO datasets</h3>
         <ul>
-          <li><a href="http://www.usgs.gov/"> U.S. Geological Survey </a>.</li>
-          <li><a href="http://www.noaa.gov/"> National Oceanic and Atmospheric Administration </a>.</li>
-          <li><a href="https://www.fema.gov/"> Federal Emergency Management Agency </a>.</li>
-          <li><a href="https://www.fs.fed.us/"> Forest Sevice </a>.</li>
+          <li><a href="http://www.usgs.gov/"> U.S. Geological Survey </a></li>
+          <li><a href="http://www.noaa.gov/"> National Oceanic and Atmospheric Administration </a></li>
+          <li><a href="https://www.fema.gov/"> Federal Emergency Management Agency </a></li>
+          <li><a href="https://www.fs.fed.us/"> Forest Sevice </a></li>
         </ul>
     <hr>
       </section>
