--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h3><a href="https://yongliu2023.github.io/research/CV.pdf">CV</a></h3>  
         <h3><a href="https://yongliu2023.github.io/course.html">Course</a></h3> 
         <h3><a href="https://yongliu2023.github.io/resource.html">Resource</a></h3> 
-        <h3><a href="https://yongliu2023.github.io/others.html">Others</a></h3>
+        <h3><a href="https://yongliu2023.github.io/others.html">Miscellaneous</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:yongliu2023@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
