--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>Research Affiliate<br><a href="https://fycs.ifas.ufl.edu/">Family, Youth and Community Science (FYCS) </a></p>
     <h3><a href="https://yongliu2023.github.io/">Home</a></h3>
         <h3><a href="https://yongliu2023.github.io/research.html">Research</a></h3>
-    <h3><a href="https://yongliu2023.github.io/research/CV.pdf">CV</a></h3>  
+    <h3><a href="https://yongliu2023.github.io/research/Yong_Liu_s_CV.pdf">CV</a></h3>  
         <h3><a href="https://yongliu2023.github.io/course.html">Course</a></h3> 
         <h3><a href="https://yongliu2023.github.io/resource.html">Resource</a></h3> 
         <h3><a href="https://yongliu2023.github.io/others.html">Miscellaneous</a></h3>
