--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </header>
       <section>
       <img src="be0c553c85e0833c41aee79d7b10e6e.jpg" height="250" width="250" alt="Yong Liu"></h3>
-      <p>I am currently an last-year Ph.D. <a href="https://fycs.ifas.ufl.edu/"> Candidate </a> at the <a href="https://www.ufl.edu/">University of Florida</a>
+      <p>I am currently a Ph.D. <a href="https://fycs.ifas.ufl.edu/"> Candidate </a> at the <a href="https://www.ufl.edu/">University of Florida</a>
       <p> My research interests are farmers' climate change adaptation decision-making and their resilience to climate change. Climate variability poses a direct threat to agricultural production and sustained growth globally. Farmers are the most vulnerable group to the adverse impact of climate change. They are expected to engage in different adaptation measures and implement climate-resilient strategies to respond to the adverse effects of weather variability and climate change. Therefore, my research aims to examine the determinants of field-crop farmers' response to climate change at the individual, household and community levels. Also, I plan to investigate the adaptation decision-making and resilience by farmers' intersectionality, including age, sex, race, income, and farm size. My research is funded by <a href="https://www.csc.edu.cn/">CSC </a> &amp; <a href="https://southern.sare.org/">USDA-SSARE</a>.</p>
       <h2> Research Interests </h2>
          <ul>
